--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "expo": "^30.0.1",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-axios": "^0.17.1",
+    "react-native-swipe-gestures": "^1.0.2",
+    "react-navigation": "^2.18.2"
   }
 }
