--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-axios": "^0.17.1",
+    "react-native-maps": "^0.22.0",
+    "react-native-open-maps": "^0.3.2",
     "react-native-swipe-gestures": "^1.0.2",
     "react-navigation": "^2.18.2"
   }
